# agent-blogger

./: .gitignore  README.md  SKILL.md  agent-blogger.config.example.yaml  pyproject.toml
references/: architecture.md  configuration.md
scripts/: __init__.py  agent_blogger.py  agent_blogger_core.py  agent_blogger_publisher.py  agent_blogger_reducer.py  agent_blogger_renderer.py  agent_blogger_source.py
tests/: test_agent_blogger.py
tests/fixtures/: expected_noisy_issue_context.json  noisy_codex_session.jsonl  noisy_openclaw_session.md
