[project]
name = "agent-blogger"
version = "0.1.0"
description = "Turn agent transcripts into blog-ready Hexo Markdown drafts"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "hl128k" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
agent-blogger = "scripts.agent_blogger:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
